--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,5 +4,8 @@
     <string name="browser">Browser</string>
     <string name="default_text">Your name will show up here.</string>
     <string name="stop_button">STOP</string>
-    <string name="start_button">START</string>
+    <string name="resume_button">RESUME</string>
+    <string name="progress_details">Progress details</string>
+    <string name="start_counting">Start counting</string>
+    <string name="reset_total_time">Reset total time</string>
 </resources>
